# esp32-s3-cam-telegram

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
docs/id/: WORKSHOP_SMP_DAY1.md
main/: CMakeLists.txt  Kconfig.projbuild  camera_manager.c  face_detector.c  idf_component.yml  led_control.c  main.c  motion_detector.c  telegram_bot.c  wifi_manager.c
main/include/: camera_manager.h  face_detector.h  led_control.h  motion_detector.h  telegram_bot.h  wifi_manager.h
